# Sniper_Compress

./: .gitignore  CMakeLists.txt  README.md  install.sh
config/: sender.env
config/daheng_camera/: feature.yaml
config/mqtt/: server.yaml
include/can/: can.h  crc.h
include/compress/: compress.h  entropy_coder.h  ga_encoder.h  message.h  preprocess_cuda.h  shm_ring.h
include/daheng_camera/driver/: GXDef.h
include/mqtt/: mqtt_sender.h
include/protobuf/: rmcc.pb.hpp  rmcc.proto
scripts/: build_sender.sh  check_env.sh  launch_camera_stream.sh  run_camera_sender.sh  run_dry_sender.sh
src/camera/: camera_capture.cpp
src/can/: can.cpp
src/cli/: main.cpp
src/compress/: compressor.cpp  entropy_coder.cpp  ga_encoder.cpp  inference_engine.cpp  mbt_encoder.cpp  message.cpp  preprocess.cpp  preprocess_cuda.cu  shm_ring.cpp  tensorrt_ga_encoder.cpp
src/mqtt/: mqtt_sender.cpp  rmcc.pb.cpp
src/serial/: serial_tx.cpp
src/test/: qvrf_dryrun_dump.cpp  test_can.cpp  test_entropy.cpp
